# gotify-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: ci.yaml  release.yaml
examples/: create_message.rs  websocket.rs
src/: app.rs  applications.rs  clients.rs  error.rs  health.rs  lib.rs  messages.rs  models.rs  plugins.rs  testsuite.rs  users.rs  utils.rs  version.rs  websocket.rs
tests/test-server/: .gitignore  gotify.db
